[ADD] added less/css editor [ADD] added mode files [IMP] removed extra calls to the server [IMP] added worker for css errors and warnings, excluded lib's css files [IMP] added a way for edit crashed assets [IMP] loaded back previously edited asset [IMP] removed extra code [IMP] improved code according new JavaScript Format (Thanks to GED :P) [IMP] added search extension for Ace Editor

--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -35,12 +35,13 @@
             <script type="text/javascript" src="/web/static/src/js/tour.js"></script>
             <script type="text/javascript" src="/web/static/test/menu.js"></script>
 
-            <link rel="stylesheet" href="/web/static/lib/fontawesome/css/font-awesome.css"/>
-            <link rel="stylesheet" href="/web/static/src/font/lato/stylesheet.css" />
+            <link rel="stylesheet" href="/web/static/lib/fontawesome/css/font-awesome.css" editable="False"/>
+            <link rel="stylesheet" href="/web/static/src/font/lato/stylesheet.css" editable="False"/>
 
             <!-- Datetime Picker -->
-            <link rel="stylesheet" href="/web/static/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css"/>
+            <link rel="stylesheet" href="/web/static/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css" editable="False"/>
             <script type="text/javascript" src="/web/static/lib/bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
+
         </template>
 
         <template id="jqueryui_conflict" name="jquery.ui.conflict">
