--- a/addons/website/static/src/css/editor.css
+++ b/addons/website/static/src/css/editor.css
@@ -639,6 +639,12 @@ ul.oe_menu_editor .disclose {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
+.oe_ace_view_editor .ace_editor_switcher {
+  display: inline-block;
+}
+.oe_ace_view_editor .ace_editor_switcher > li > a {
+  padding:5px 15px;
+}
 
 .oe_include_bundles {
   font-weight: normal;
