--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -13,8 +13,8 @@
     <script type="text/javascript" src="/website/static/src/js/website.snippets.animation.js"></script>
     <script type="text/javascript" src="/web/static/lib/bootstrap/js/bootstrap.js"></script>
 
-    <link rel="stylesheet" href="/web/static/lib/select2/select2.css"/>
-    <link rel="stylesheet" href="/website/static/lib/select2-bootstrap-css/select2-bootstrap.css"/>
+    <link rel="stylesheet" href="/web/static/lib/select2/select2.css" editable="False"/>
+    <link rel="stylesheet" href="/website/static/lib/select2-bootstrap-css/select2-bootstrap.css" editable="False"/>
     <script type="text/javascript" src="/web/static/lib/select2/select2.js"></script>
     
 </template>
@@ -242,7 +242,7 @@
     <script type="text/javascript" src="/website/static/src/js/summernote.js"></script>
 
     <!--link rel="stylesheet" href="/website/static/lib/summernote/src/less/summernote.less"/-->
-    <link rel="stylesheet" href="/website/static/lib/summernote/summernote.css"/>
+    <link rel="stylesheet" href="/website/static/lib/summernote/summernote.css" editable="False"/>
 </template>
 <template id="editor" name="Editor">
     <link rel='stylesheet' href='/website/static/src/css/snippets.css'/>
@@ -273,6 +273,9 @@
     <script type="text/javascript" src="/website/static/lib/ace/ace.js"></script>
     <script type="text/javascript" src="/website/static/lib/ace/theme-monokai.js"></script>
     <script type="text/javascript" src="/website/static/lib/ace/mode-xml.js"></script>
+    <script type="text/javascript" src="/website/static/lib/ace/mode-less.js"></script>
+    <script type="text/javascript" src="/website/static/lib/ace/mode-css.js"></script>
+    <script type="text/javascript" src="/website/static/lib/ace/ext-searchbox.js"></script>
     <script type="text/javascript" src="/website/static/lib/vkbeautify/vkbeautify.0.99.00.beta.js"></script>
     <script type="text/javascript" src="/website/static/lib//jquery.mjs.nestedSortable/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="/website/static/src/js/website.contentMenu.js"></script> <!-- groups="base.group_website_designer" -->
@@ -809,6 +812,25 @@
             </div>
         </body>
     </html>
+</template>
+
+<template id="reset_style">
+    <t t-call="website.layout">
+        <t t-set="head">
+            <link rel='stylesheet' href='/web/static/lib/fontawesome/css/font-awesome.css' editable="False"/>
+            <link rel='stylesheet' href='/web/static/lib/bootstrap/css/bootstrap.css' editable="False"/>
+            <link rel='stylesheet' href='/website/static/src/css/website.css'/>
+            <link rel='stylesheet' href='/website/static/src/css/reset_style.css' editable="False"/>
+        </t>
+            <div class="alert alert-danger reset_style_alert">
+                <i class="fa fa-warning"/> 
+                This page is loaded with basic bootstrap. You can edit or reset assets.
+                For checking whether your change is applied or not redirect to home page after edit.
+                <br/>
+                <a href="/">Go to Home page <i class="fa fa-arrow-right"/></a>
+            </div>
+    </t>
+
 </template>
 
 <template id="robots">
