--- a/addons/event_sale/views/report_registrationbadge.xml
+++ b/addons/event_sale/views/report_registrationbadge.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <template id="event.report_registration_badge">
             <t t-call="report.html_container">
             <t t-foreach="docs" t-as="o">
@@ -58,5 +57,4 @@
             </t>
         </t>
         </template>
-    </data>
-</openerp>
+</odoo>
