--- a/addons/website_google_map/views/google_map.xml
+++ b/addons/website_google_map/views/google_map.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<odoo>
 <template id="google_map">
 &lt;!DOCTYPE html&gt;
 <html>
@@ -21,5 +20,4 @@
     </body>
 </html>
 </template>
-</data>
-</openerp>
+</odoo>
