--- a/addons/product_margin/views/product_margin_view.xml
+++ b/addons/product_margin/views/product_margin_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<odoo>
     <record model="ir.ui.view" id="view_product_margin_graph">
-            <field name="name">product.margin.graph</field>
+            <field name="name">product.product.graph</field>
             <field name="model">product.product</field>
             <field name="priority" eval="50"/>
             <field name="arch" type="xml">
@@ -15,7 +14,7 @@
     </record>
 
      <record id="view_product_margin_form" model="ir.ui.view">
-            <field name="name">product.margin.form.inherit</field>
+            <field name="name">product.product.form.inherit</field>
             <field name="model">product.product</field>
             <field name="priority">50</field>
             <field name="arch" type="xml">
@@ -61,7 +60,7 @@
         </record>
 
         <record id="view_product_margin_tree" model="ir.ui.view">
-            <field name="name">product.margin.tree</field>
+            <field name="name">product.product.tree</field>
             <field name="model">product.product</field>
             <field name="priority" eval="50"/>
             <field name="arch" type="xml">
@@ -76,7 +75,7 @@
                     <field name="purchase_num_invoiced" string="#Purchased"/>
                     <field name="total_margin"/>
                     <field name="expected_margin"/>
-                    <field name="total_margin_rate"  widget="progressbar"/>
+                    <field name="total_margin_rate" widget="progressbar"/>
                     <field name="expected_margin_rate" widget="progressbar"/>
                     <field name="categ_id" invisible="1"/>
                     <field name="uom_id" invisible="1"/>
@@ -88,6 +87,4 @@
 
   <menuitem id="base.next_id_73" name="Purchase" parent="base.menu_reporting" sequence="36"/>
   <menuitem icon="STOCK_JUSTIFY_FILL" action="product_margin_act_window" id="menu_action_product_margin" name="Product Margins" sequence="5" parent="base.next_id_73"/>
-
-</data>
-</openerp>
+</odoo>
