--- a/addons/website_forum_doc/views/doc.xml
+++ b/addons/website_forum_doc/views/doc.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
-
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
         <!-- DOCUMENTATION TOC VIEWS -->
         <record id="view_documentation_toc_list" model="ir.ui.view">
             <field name="name">forum.documentation.toc.list</field>
@@ -81,7 +79,7 @@
                 </xpath>
                 <xpath expr="//sheet" position="before">
                     <header>
-                        <field name="documentation_stage_id" widget="statusbar"/>
+                        <field name="documentation_stage_id" widget="statusbar" clickable="True"/>
                     </header>
                 </xpath>
             </field>
@@ -97,6 +95,4 @@
                 </xpath>
             </field>
         </record>
-
-    </data>
-</openerp>
+</odoo>
