--- a/addons/website_forum_doc/views/website_doc.xml
+++ b/addons/website_forum_doc/views/website_doc.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
-
+<odoo>
         <!-- Front-end assets: custom css -->
         <template id="assets_frontend" inherit_id="website.assets_frontend" name="Shop">
             <xpath expr="." position="inside">
@@ -265,7 +263,4 @@
                 </section>
             </t>
         </template>
-
-
-    </data>
-</openerp>
+</odoo>
