--- a/addons/auth_oauth/views/res_config.xml
+++ b/addons/auth_oauth/views/res_config.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+    
         <record model="ir.ui.view" id="view_general_configuration">
             <field name="name">base.config.settings.oauth</field>
             <field name="model">base.config.settings</field>
@@ -46,5 +46,5 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+
+</odoo>
