--- a/addons/auth_oauth/views/res_users.xml
+++ b/addons/auth_oauth/views/res_users.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>   
+<odoo>
+
         <record id="view_users_form" model="ir.ui.view">
             <field name="name">res.users.form</field>
             <field name="model">res.users</field>
@@ -18,6 +18,6 @@
                 </xpath>
             </field>
         </record>
-    </data>
-</openerp>
+
+</odoo>
 
