--- a/addons/website_twitter/views/twitter_view.xml
+++ b/addons/website_twitter/views/twitter_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <record id="view_website_config_settings" model="ir.ui.view">
             <field name="name">Twitter settings</field>
             <field name="model">website.config.settings</field>
@@ -52,5 +51,4 @@
                 </xpath>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
