--- a/addons/website_customer/views/website_customer_view.xml
+++ b/addons/website_customer/views/website_customer_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
-<openerp>
-    <data>
+<odoo>
         <record id="view_partners_form_website" model="ir.ui.view">
-            <field name="name">view.res.partner.form.website.tags</field>
+            <field name="name">res.partner.form.inherit</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="website_partner.view_partners_form_website" />
             <field name="arch" type="xml">
@@ -17,7 +16,7 @@
         </record>
 
         <record id="view_partner_tag_form" model="ir.ui.view">
-            <field name="name">Partner Tags</field>
+            <field name="name">res.partner.tag.form</field>
             <field name="model">res.partner.tag</field>
             <field name="arch" type="xml">
                 <form string="Partner Tag">
@@ -31,7 +30,7 @@
             </field>
         </record>
         <record id="view_partner_tag_list" model="ir.ui.view">
-            <field name="name">Partner Tags</field>
+            <field name="name">res.partner.tag.tree</field>
             <field name="model">res.partner.tag</field>
             <field eval="6" name="priority"/>
             <field name="arch" type="xml">
@@ -68,5 +67,4 @@
             parent="base.menu_config_address_book"
             groups="base.group_no_one"
         />
-    </data>
-</openerp>
+</odoo>
