--- a/addons/website_event_track/views/website_event.xml
+++ b/addons/website_event_track/views/website_event.xml
@@ -213,7 +213,7 @@
                             <div class="col-sm-2">
                                 <span t-field="track.image"
                                     t-field-options='{"widget": "image", "class": "img-circle"}'/>
-                                    <!-- <span t-field="speaker.self" t-field-options='{"widget": "contact", "fields": ["name", "country_id"]}'
+                                    <!-- <span t-field="speaker.self_id" t-field-options='{"widget": "contact", "fields": ["name", "country_id"]}'
                                         style="display: inline-block;"/> -->
                             </div><div class="col-sm-10">
                                <h4 t-field="speaker.name" class="mb4"/>
