--- a/addons/base_setup/views/base_setup_views.xml
+++ b/addons/base_setup/views/base_setup_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
         <!-- Show menus that are hidden in module base -->
         <record id="base.menu_res_company_global" model="ir.ui.menu">
@@ -9,7 +8,7 @@
 
         <!-- Specify your terminology config wiz -->
         <record id="base_setup_terminology_form" model="ir.ui.view">
-            <field name="name">Specify Your Terminology</field>
+            <field name="name">base.setup.terminology.form.inherit</field>
             <field name="model">base.setup.terminology</field>
             <field name="inherit_id" ref="base.res_config_view_base"/>
             <field name="arch" type="xml">
@@ -37,5 +36,4 @@
             <field name="target">new</field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
