[MIG] google_spreadsheet migrated to new api

--- a/addons/google_spreadsheet/views/google_spreadsheet_view.xml
+++ b/addons/google_spreadsheet/views/google_spreadsheet_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
         <!-- add google drive config field in user form -->
 
@@ -61,5 +60,4 @@
         </record>
 
         <menuitem id="menu_reporting_dashboard_google_spreadsheets" parent="base.menu_reporting_dashboard" action="action_ir_attachment_google_spreadsheet_tree"/>
-    </data>
-</openerp>
+</odoo>
