--- a/addons/crm_partner_assign/views/crm_lead_view.xml
+++ b/addons/crm_partner_assign/views/crm_lead_view.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
         <record id="view_crm_opportunity_geo_assign_form" model="ir.ui.view">
             <field name="name">crm.lead.geo_assign.inherit</field>
             <field name="model">crm.lead</field>
@@ -26,7 +25,7 @@
                                     </div>
                                     <button string="Automatic Assignation" name="action_assign_partner" type="object" colspan="1"
                                         class="oe_inline"/>
-                                    <field name="partner_assigned_id" class="oe_inline" on_change="onchange_assign_id(partner_assigned_id)" domain="[('grade_id','&lt;&gt;',False)]"/>
+                                    <field name="partner_assigned_id" class="oe_inline" domain="[('grade_id','&lt;&gt;',False)]"/>
                                     <div>
                                         <button string="Send Email"
                                             attrs="{'invisible':[('partner_assigned_id','=',False)]}"
@@ -55,7 +54,7 @@
         </record>
 
         <record model="ir.ui.view" id="crm_opportunity_partner_filter">
-            <field name="name">crm.opportunity.partner.filter.assigned</field>
+            <field name="name">crm.opportunity.partner.filter.assigned.inherit</field>
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.view_crm_case_opportunities_filter"/>
             <field name="arch" type="xml">
@@ -96,7 +95,7 @@
                                     </div>
                                     <button string="Automatic Assignation" name="action_assign_partner" type="object" colspan="1"
                                         class="oe_inline" />
-                                    <field name="partner_assigned_id" class="oe_inline" on_change="onchange_assign_id(partner_assigned_id)" domain="[('grade_id','&lt;&gt;',False)]"/>
+                                    <field name="partner_assigned_id" class="oe_inline" domain="[('grade_id','&lt;&gt;',False)]"/>
                                     <div>
                                         <button string="Send Email"
                                             attrs="{'invisible':[('partner_assigned_id','=',False)]}"
@@ -124,7 +123,7 @@
         </record>
 
         <record model="ir.ui.view" id="crm_lead_partner_filter">
-            <field name="name">crm.lead.partner.filter.assigned</field>
+            <field name="name">crm.lead.partner.filter.assigned.inherit</field>
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.view_crm_case_leads_filter"/>
             <field name="arch" type="xml">
@@ -165,5 +164,4 @@
             <field name="model">crm.lead</field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
