--- a/addons/crm_partner_assign/views/crm_portal_view.xml
+++ b/addons/crm_partner_assign/views/crm_portal_view.xml
@@ -1,8 +1,8 @@
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
     <!-- lead views-->
         <record model="ir.ui.view" id="crm_lead_portal_tree">
-            <field name="name">partner lead</field>
+            <field name="name">crm.lead.portal.tree</field>
             <field name="model">crm.lead</field>
             <field name="priority" eval="32"/>
             <field name="arch" type="xml">
@@ -26,7 +26,7 @@
             </field>
         </record>
         <record model= "ir.ui.view" id="crm_lead_portal_form">
-            <field name="name">crm_portal_form</field>
+            <field name="name">crm.portal.form</field>
             <field name="model">crm.lead</field>
             <field name="priority" eval="32"/>
             <field name="arch" type="xml">
@@ -68,7 +68,7 @@
         </record>
         <!-- opportunity views-->
         <record model="ir.ui.view" id="crm_opportunity_portal_tree">
-            <field name="name">partner lead</field>
+            <field name="name">crm.opportunity.portal.tree</field>
             <field name="model">crm.lead</field>
             <field name="priority" eval="32"/>
             <field name="arch" type="xml">
@@ -90,7 +90,7 @@
             </field>
         </record>
         <record model= "ir.ui.view" id="crm_opportunity_portal_form">
-            <field name="name">crm_portal_form</field>
+            <field name="name">crm.opportunity.portal.form</field>
             <field name="model">crm.lead</field>
             <field name="priority" eval="32"/>
             <field name="arch" type="xml">
@@ -113,7 +113,7 @@
                     <group col="2">
                       <separator string="Contact" colspan="2"/>
                       <group col="2">
-                          <field name="partner_id" select="1"
+                          <field name="partner_id"
                             string="Customer"
                             colspan="2" readonly="1"/>
                           <field name="partner_name" string="Customer Name" readonly="1"/>
@@ -211,5 +211,4 @@
       <menuitem action="action_portal_leads" sequence="0" id="openerp_portal_menu_sales_leads_current" parent="portal_leads"/>
       <menuitem action="action_portal_opportunities" sequence="1" id="openerp_portal_menu_sales_leads_current1" parent="portal_leads"/>
 
-    </data>
-</openerp>
+</odoo>
