[MIG] hr: Migrated to new api.

--- a/addons/hr/views/hr_installer.xml
+++ b/addons/hr/views/hr_installer.xml
@@ -1,5 +1,5 @@
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
 
         <record model="ir.actions.act_window" id="view_department_form_installer">
             <field name="name">Create Your Departments</field>
@@ -19,5 +19,4 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
