--- a/addons/website_sale_stock/views/website_sale_stock.xml
+++ b/addons/website_sale_stock/views/website_sale_stock.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <template id="orders_followup_shipping" name="Orders Shipping Followup" inherit_id="website_sale.order_invoice">
+  <template id="orders_followup_shipping" name="Orders Shipping Followup" inherit_id="website_portal.orders_followup">
     <xpath expr="//div[@id='shipping_address']" position="inside">
       <t t-if="o.picking_ids">
         <div>
