[MIG]auth_signup: Migrated in new API

--- a/addons/auth_signup/views/res_config.xml
+++ b/addons/auth_signup/views/res_config.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+
 
         <record id="view_general_configuration" model="ir.ui.view">
             <field name="name">base.config.settings.signup</field>
@@ -26,5 +26,5 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+
+</odoo>
