--- a/addons/auth_signup/views/res_users_view.xml
+++ b/addons/auth_signup/views/res_users_view.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+
 
         <record id="res_users_form_view" model="ir.ui.view">
             <field name="name">user.form.state</field>
@@ -37,5 +37,5 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+
+</odoo>
