[WIP] mail: timeline view refactoring for chatter

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -54,9 +54,10 @@
     }
 
     .openerp .oe_timeline .oe_view_nocontent {
-        float: right;
-        width: 84.2%;
+        display: inline-block;
         border-left: dashed 2px #A4A4A4;
+        width: 84%;
+        margin-left: 15.8%;
     }
 
     /* -------------- parent message -------------- */
