--- a/addons/website_sale_delivery/views/website_sale_delivery_view.xml
+++ b/addons/website_sale_delivery/views/website_sale_delivery_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<odoo>
 
     <record model="ir.ui.view" id="view_delivery_carrier_form">
-        <field name="name">delivery.carrier.website.form</field>
+        <field name="name">delivery.carrier.website.form.inherit</field>
         <field name="model">delivery.carrier</field>
         <field name="inherit_id" ref="delivery.view_delivery_carrier_form"/>
         <field name="arch" type="xml">
@@ -16,5 +15,4 @@
         </field>
     </record>
 
- </data>
-</openerp>
+</odoo>
