--- a/addons/product_expiry/views/product_expiry_view.xml
+++ b/addons/product_expiry/views/product_expiry_view.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" ?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
         <record model="ir.ui.view" id="view_move_form_expiry">
-            <field name="name">stock.production.lot.form</field>
+            <field name="name">stock.production.lot.form.inherit</field>
             <field name="model">stock.production.lot</field>
             <field name="inherit_id" ref="stock.view_production_lot_form" />
             <field name="arch" type="xml">
@@ -13,7 +12,7 @@
                         <field name="removal_date" />
                     </group>
                     <group>
-                    	<field name="life_date" />
+                        <field name="life_date" />
                         <field name="alert_date" />
                     </group>
                 </group>
@@ -22,7 +21,7 @@
         </record>
 
         <record model="ir.ui.view" id="view_product_form_expiry">
-            <field name="name">product.normal.form</field>
+            <field name="name">product.normal.form.inherit</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_form_view" />
             <field name="arch" type="xml">
@@ -36,6 +35,5 @@
                 </group>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
 
