--- a/addons/auth_ldap/views/user_ldap_installer.xml
+++ b/addons/auth_ldap/views/user_ldap_installer.xml
@@ -1,5 +1,5 @@
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
 
         <!-- ldap installer Form View -->
         <record model="ir.ui.view" id="view_ldap_installer_form">
@@ -46,5 +46,4 @@
         <record id="config_wizard_action_ldap_installer" model="ir.actions.todo">
             <field name="action_id" ref="action_ldap_installer"/>
         </record>
-    </data>
-</openerp>
+</odoo>
