--- a/addons/auth_ldap/views/users_ldap_view.xml
+++ b/addons/auth_ldap/views/users_ldap_view.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
-        <record model="ir.ui.view" id="company_form_view">
-            <field name="name">res.company.form.inherit.users_ldap</field>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+        <record model="ir.ui.view" id="auth_ldap_view_company_form_inherit">
+            <field name="name">auth.ldap.res.company.form.inherit</field>
             <field name="model">res.company</field>
             <field name="inherit_id" ref="base.view_company_form"/>
             <field name="arch" type="xml">
@@ -35,5 +34,4 @@
                 </xpath>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
